Thu May 12 16:59:22 BST 2005  Olly Betts <olly@survex.com>

	* backends/database.cc,backends/Makefile.am,include/xapian/database.h,
	  include/xapian/dbfactory.h,include/xapian.h,include/Makefile.am:
	  Split off database factory methods into xapian/dbfactory.h - this
	  allows us to fix recent breakage in VPATH builds (caused by the
	  need to include the generated file xapian/version.h from
	  xapian/database.h) without modifying almost every Makefile.am.

Wed May 11 16:52:41 BST 2005  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Move prefixed, bracketed
	  subexpression to be an alternative for stop_term which allows
	  "term prefix:(term2 term3)" to parse correctly. Also move
	  non-prefixed, bracketed subexpression to be an alternative
	  for stop_term - this doesn't change how things parse, but
	  makes the grammar simpler.
	* tests/queryparsertest.cc: Added regression test for the above.
	* tests/Makefile.am,tests/queryparsertest.cc: Reworked queryparsertest
	  to use the standard testsuite harness.
 
Wed May 11 16:09:32 BST 2005  Olly Betts <olly@survex.com>

	* include/xapian/query.h: Fix OP_ELITE_SET at 10 (the value it had
	  in 0.8.5).

Tue May 10 22:56:45 BST 2005  Olly Betts <olly@survex.com>

	* docs/Makefile.am: Removed check for DOXYGEN_HAVE_DOT which I removed
	  recently.

Tue May 10 01:09:01 BST 2005  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Removed state parameter from
	  TermList::add_term() since it is no longer used.

Mon May 09 20:56:40 BST 2005  Olly Betts <olly@survex.com>

	* docs/Makefile.am: Explicitly set the pool_size for latex, because we
	  seem to overflow the default setting on many systems.
	* docs/Makefile.am: Use $(MAKE) instead of make.

Sun May 08 23:22:37 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac: Corrected $CC -> $CXX to fix bogus message "Checking
	  for  option to enable ANSI C++ mode".
	* configure.ac: If any tools needed for documentation are missing