@@ -1,3 +1,8 @@
+Thu May 12 18:54:11 BST 2005  Olly Betts <olly@survex.com>
+
+	* docs/doxygen_api_conf.in,docs/Makefile.am: Fix to generate docs
+	  for all backend factory functions like 0.8.5 did.
+
 Thu May 12 16:59:22 BST 2005  Olly Betts <olly@survex.com>
 
 	* backends/database.cc,backends/Makefile.am,include/xapian/database.h,
